--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,13 @@
         }
     ],
     "require": {
-        "violinist-dev/slug-from-url": "^1.2"
+        "violinist-dev/slug-from-url": "^1.2",
+        "php-http/guzzle6-adapter": "^2.0",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "knplabs/github-api": "^3.1",
+        "m4tthumphrey/php-gitlab-api": "^11.4"
+    },
+    "config": {
+        "php": "7.0"
     }
 }
