--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     },
     "require": {
+        "bitbucket/client": "^2",
         "violinist-dev/slug-from-url": "^1.2",
         "knplabs/github-api": "^2.15.0",
         "m4tthumphrey/php-gitlab-api": "^9.17.1",
